fix: footer center alignment

--- a/src/styles/custom.css
+++ b/src/styles/custom.css
@@ -1938,6 +1938,7 @@ tbody tr td:nth-child(-n + 3) {
 .autosuggest-footer-container {
 	display: flex;
 	justify-content: space-between;
+	align-items: center;
 	color: #8792a2;
 	background: #f7fafc;
 	padding: 10px;
